--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     </tr>
 
     <tr>
-      <td><a href="record-1.schema.json">record-1-schema.json</td>
+      <td><a href="record-1.schema.json">record-1.schema.json</td>
     </tr>
     <tr>
-      <td><a href="repodata-1.schema.json">repodata-1-schema.json</td>
+      <td><a href="repodata-1.schema.json">repodata-1.schema.json</td>
     </tr>
   </table>
 </body>
