--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </tr>
 
     <tr>
-      <td><a href="record-1.schema.json">record-1.schema.json</td>
+      <td><a href="repodata-record-1.schema.json">repodata-record-1.schema.json</td>
     </tr>
     <tr>
       <td><a href="repodata-1.schema.json">repodata-1.schema.json</td>
