--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
     </tr>
 
     <tr>
-      <td><a href="repodata-record-1.schema.json">repodata-record-1.schema.json</td>
+      <td><a href="common-1.schema.json">common-1.schema.json</td>
+    </tr>
+    <tr>
+      <td><a href="info-security-1.schema.json">info-security-1.schema.json</td>
     </tr>
     <tr>
       <td><a href="repodata-1.schema.json">repodata-1.schema.json</td>
+    </tr>
+    <tr>
+      <td><a href="repodata-record-1.schema.json">repodata-record-1.schema.json</td>
     </tr>
   </table>
 </body>
