--- a/site/index.j2.html
+++ b/site/index.j2.html
@@ -22,7 +22,8 @@
         <ul>
             {% for item in section["items"] %}
             <li>
-                <a href="{{ item['url'] }}" target="_blank">{{ item['name'] }}</a>
+                <a href="{{ item['url'] }}" target="_blank">{{ item['name'] }}</a> &middot;
+                (<a href="https://json-schema.app/view/%23?url={{ site_url }}/{{ item['url'] }}" target="_blank">explore</a>)
             </li>
             {% endfor %}
         </ul>
