--- a/site/index.j2.html
+++ b/site/index.j2.html
@@ -16,18 +16,24 @@
     <div id="content">
         <h1 id="top">conda schemas</h1>
         <p>{{ description }}</p>
-        {% for section in sections %}
-        <h2 id="{{ section['name']|lower }}">{{ section['name'] }}</h1>
+        <p><strong>Table of contents:</strong></p>
+        <ul>
+        {%- for section in sections %}
+            <li><a href="#{{ section['name']|lower }}">{{ section['name'] }}</a></li>
+        {%- endfor %}
+        </ul>
+        {%- for section in sections %}
+        <h2 id="{{ section['name']|lower }}"><a href="#{{ section['name']|lower }}">#</a> {{ section['name'] }}</h2>
         <p>{{ markdown(section['description']) }}</p>
         <ul>
-            {% for item in section["items"] %}
+            {%- for item in section["items"] %}
             <li>
                 <a href="{{ item['url'] }}" target="_blank">{{ item['name'] }}</a> &middot;
                 (<a href="https://json-schema.app/view/%23?url={{ site_url }}/{{ item['url'] }}" target="_blank">explore</a>)
             </li>
-            {% endfor %}
+            {%- endfor %}
         </ul>
-        {% endfor %}
+        {%- endfor %}
     </div>
   </body>
 </html>
