Add links to code repo and issues.

--- a/site/index.j2.html
+++ b/site/index.j2.html
@@ -35,6 +35,11 @@
             {%- endfor %}
         </ul>
         {%- endfor %}
+<h2>Links</h2>
+        <ul>
+          <li><a href="{{ repo_url }}">Code repo</a></li>
+          <li><a href="{{ issues_url }}">Issues</a></li>
+        </ul>
     </div>
   </body>
 </html>
