--- a/site/index.j2.html
+++ b/site/index.j2.html
@@ -15,15 +15,16 @@
   <body>
     <div id="content">
         <h1 id="top">conda schemas</h1>
-        <p>{{ description }}</p>
-        <p><strong>Table of contents:</strong></p>
+        <p>{{ markdown(description) }}</p>
+        <h2>Table of contents</h2>
         <ul>
         {%- for section in sections %}
             <li><a href="#{{ section['name']|lower }}">{{ section['name'] }}</a></li>
         {%- endfor %}
         </ul>
+        <h2>Schemas</h2>
         {%- for section in sections %}
-        <h2 id="{{ section['name']|lower }}"><a href="#{{ section['name']|lower }}">#</a> {{ section['name'] }}</h2>
+        <h3 id="{{ section['name']|lower }}"><a href="#{{ section['name']|lower }}">#</a> {{ section['name'] }}</h3>
         <p>{{ markdown(section['description']) }}</p>
         <ul>
             {%- for item in section["items"] %}
